--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -131,13 +131,23 @@ body {
 }
 .btn_logIn {
   color: white;
-  background-color: #b2dffc;
+
   height: 36px;
   width: 266px;
   border-style: none;
   border-radius: 5px;
   font-size: 14px;
+  background-color: #0095f6;
 }
+
+.btn_logIn:not([disabled]) {
+  background-color: #0095f6;
+}
+
+button[disabled] {
+  background-color: rgba(0, 149, 246, 0.3);
+}
+
 .part_Or {
   display: flex;
   flex-grow: 1;
