--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -3,7 +3,8 @@ body {
   display: flex;
   align-items: stretch;
   flex-shrink: 0;
-
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -14,79 +15,7 @@ main {
   width: 100vw;
   background-color: #fafafa;
 }
-.main_Navigation {
-  height: 54px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-color: #dbdbdb;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  background-color: white;
-  position: fixed;
-  top: 0;
-  z-index: 1;
-}
-.main_Navigation .nav_Container {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-grow: 1;
-  align-items: center;
-  padding: 0 20px;
-  max-width: 975px;
-}
-.main_Navigation .logo_Container {
-  flex: 1 9999 0%;
-}
-.main_Navigation .search_Container {
-  flex: 0 1 auto;
-  height: 28px;
-  min-width: 125px;
-  width: 215px;
-  background-color: #fafafa;
-  border-color: #dbdbdb;
-  border-style: solid;
-  border-width: 1px;
-  color: #a5a7aa;
-}
-.input_Search {
-  background-color: #fafafa;
-  border-style: none;
-}
-.main_Navigation .menu_Container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex: 1 0 0%;
-}
 
-.main_Navigation .menu_Container .nav_MenuIcon {
-  margin-left: 22px;
-}
-.main_Navigation .nav_Container .logo_Container {
-  display: flex;
-}
-
-.main_Navigation .nav_Container .logo_Container .logo_image {
-  width: 103px;
-  height: 29px;
-}
-
-.search {
-  position: relative;
-  top: 3px;
-  left: 7px;
-  width: 1px;
-  height: 1px;
-}
-
-.menu_Container .user_image {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-}
 .profile_Main .profile_MainContainer {
   max-width: 935px;
   width: 100%;
@@ -142,8 +71,18 @@ main {
   .profile_Info
   .profile_Info1 {
   font-size: 28px;
+  display: flex;
+  align-items: center;
 }
-
+.profile_Main
+  .profile_MainContainer
+  .profile_Header
+  .profile_Info
+  .profile_Info1
+  a {
+  display: flex;
+  align-items: center;
+}
 .profile_Main
   .profile_MainContainer
   .profile_Header
@@ -170,10 +109,10 @@ main .profile_Main {
   align-items: center;
 }
 
-.profile_PostsC,
-.profile_FollowersC,
-.profile_FollowsC {
-  font-weight: 700;
+.profile_PostsC2,
+.profile_FollowersC2,
+.profile_FollowsC2 {
+  font-weight: 600;
 }
 
 .profile_PostsC2,
@@ -204,4 +143,74 @@ main .profile_Main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.container_Category {
+  border-top: 1px solid #dbdbdb;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.container_Category .container_LookPosts {
+  border-top: 1px solid #dbdbdb;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  border-top: 1px solid #262626;
+  height: 100%;
+  height: 52px;
+  font-size: 12px;
+  margin-top: -1px;
+}
+
+.btn_Follow {
+  margin-left: 20px;
+  background-color: transparent;
+  border-color: rgba(var(--d69, 0, 149, 246), 1);
+  background: #0095f6;
+  color: white;
+  border-style: solid;
+  border-width: 1px;
+  padding: 0 24px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 26px;
+  outline: 0;
+  overflow: hidden;
+
+  border-radius: 3px;
+}
+.un {
+  margin-left: 20px;
+  background-color: transparent;
+  border-style: solid;
+  border-width: 1px;
+  padding: 0 24px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 26px;
+  outline: 0;
+  overflow: hidden;
+  border: 1px solid rgba(var(--ca6, 219, 219, 219), 1);
+  color: rgba(var(--f75, 38, 38, 38), 1);
+  border-radius: 4px;
+}
+.btn_Edit {
+  margin-left: 20px;
+  border: 1px solid rgba(var(--ca6, 219, 219, 219), 1);
+  font-weight: 600;
+  padding: 5px 9px;
+  background-color: transparent;
+  border-radius: 4px;
+}
+
+.txt_UserName {
+  font-weight: 600;
+  margin: 0;
+  padding: 0;
+  border: 0;
+
+  vertical-align: baseline;
+  font-size: 16px;
+  margin-bottom: 3px;
 }
