--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,19 +3,21 @@ body {
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
+  line-height: 18px;
 }
 a,
 a:visited {
   /* color: #00376b;
   color: rgba(var(--fe0, 0, 55, 107), 1); */
   text-decoration: none;
+  color: #262626;
 }
 
 .black_link {
   color: #262626;
   text-decoration: none;
 }
-.main_Navigation {
+/* .main_Navigation {
   height: 54px;
   width: 100%;
   display: flex;
@@ -28,9 +30,14 @@ a:visited {
   position: fixed;
   top: 0;
   z-index: 1;
+} */
+.main_Section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  max-width: 600px;
 }
-.main_Navigation .nav_Container {
-  height: 100%;
+/* .main_Navigation .nav_Container {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
@@ -72,25 +79,38 @@ a:visited {
 .main_Navigation .nav_Container .logo_Container .logo_image {
   width: 103px;
   height: 29px;
-}
+} */
 
 .main_Container {
   display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  max-width: 935px;
+  flex-grow: 1;
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+  flex-flow: row nowrap;
+  flex-direction: normal;
+  position: relative;
+  flex-shrink: 0;
 }
 
 .main_Container .main_Section {
   max-width: 614px;
   width: 100%;
   margin-right: 28px;
+  font-size: 14px;
+}
+.main_Container .main_Section .contents {
+  margin-top: 30px;
 }
 .main_Container .main_Section .contents .content {
   border-style: solid;
   border-width: 1px;
-  border-color: #dbdbdb;
+  border: 1px solid rgba(var(--b6a, 219, 219, 219), 1);
   color: #262626;
   background-color: white;
-  margin-top: 90px;
+  margin-bottom: 60px;
 }
 .main_Container .main_Section .contents .content .content_Header {
   display: flex;
@@ -140,6 +160,7 @@ a:visited {
   border: none;
   outline: none;
 }
+
 .main_Container
   .main_Section
   .contents
@@ -147,8 +168,8 @@ a:visited {
   .content_Comments
   .write_Comment {
   border-top-width: 1px;
-  border-color: #dbdbdb;
   border-top-style: solid;
+  border-color: rgba(var(--ce3, 239, 239, 239), 1);
   display: flex;
   flex-direction: row;
 }
@@ -195,15 +216,17 @@ a:visited {
   .btn_Write_Comment {
   border: 0;
   background: 0 0;
-  opacity: 0.3;
+  color: #0095f6;
   width: 42px;
   height: 18px;
+  font-weight: 600;
 }
 .main_Container .main_Section .contents .content .content_Buttons,
 .main_Container .main_Section .contents .content .content_Comments_List,
 .main_Container .main_Section .contents .content .content_description,
 .main_Container .main_Section .contents .content .content_Like,
-.content_Date {
+.content_Date,
+.content_MoreComments {
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -225,9 +248,94 @@ input:focus {
   font-weight: 700;
 }
 .content_Date {
-  font-size: 9px;
+  font-size: 10px;
+  letter-spacing: 0.2px;
+  line-height: 18px;
+  color: rgba(var(--f52, 142, 142, 142), 1);
 }
 
-svg {
+.span_MoreComments {
+  color: rgba(var(--f52, 142, 142, 142), 1);
   cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.3;
+}
+@media screen and (max-width: 1000px) {
+  .side_Section {
+    display: none;
+  }
+}
+
+.side_Section {
+  position: absolute;
+
+  max-width: 293px;
+  right: 0;
+  flex-shrink: 0;
+}
+.side_Section .user_Info {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  margin-top: 30px;
+}
+.side_Section .user_Info img {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+.side_Section .userIDName {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  margin-left: 12px;
+  font-size: 14px;
+}
+
+.side_Section .userIDName .user_ID {
+  font-weight: 600;
+}
+.side_Section .userIDName .user_Name {
+  color: rgba(var(--f52, 142, 142, 142), 1);
+  font-weight: 400;
+}
+
+.container_Recommend {
+  display: flex;
+  flex-direction: column;
+}
+.container_Recommend .container_Recommend2 {
+  margin-top: 12px;
+
+  padding-right: 16px;
+  display: flex;
+  flex-direction: row;
+  font-weight: 600;
+}
+
+.container_Recommend .container_Recommend2 .span_Recommend {
+  color: rgba(var(--f52, 142, 142, 142), 1);
+  flex: 1 1 auto;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.container_Recommend .container_Recommend2 .span_All {
+  font-size: 12px;
+  line-height: 14px;
+}
+.side_Section .container_Footer {
+  display: flex;
+}
+.side_Section .container_Footer .span_Right {
+  color: rgba(var(--edc, 199, 199, 199), 1);
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 13px;
+  text-transform: uppercase;
+  margin-top: 16px;
 }
