--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -1,28 +1,52 @@
 .main_Navigation {
-  height: 54px;
-  width: 100%;
+  display: flex;
+
+  background-color: white;
+
+  position: relative;
+  flex-direction: column;
+}
+.nav_Height {
+  display: flex;
+  flex-basis: 54px;
+  flex-direction: column;
+  position: relative;
+}
+.nav_Relative {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+.nav_Fixed {
+  z-index: 3;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 54px;
+  position: fixed;
+  width: 100%;
+  background-color: #fff;
   border-color: #dbdbdb;
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  background-color: white;
-  position: fixed;
-  top: 0;
-  z-index: 1;
+  box-sizing: border-box;
 }
 .main_Navigation .nav_Container {
-  height: 100%;
   display: flex;
   flex-direction: row;
   flex-grow: 1;
   align-items: center;
   padding: 0 20px;
   max-width: 975px;
+
+  width: 100%;
 }
 .main_Navigation .logo_Container {
   flex: 1 9999 0%;
+  position: relative;
 }
 .main_Navigation .search_Container {
   flex: 0 1 auto;
@@ -53,6 +77,7 @@
 }
 .main_Navigation .nav_Container .logo_Container {
   display: flex;
+  flex: 1 9999 0%;
 }
 
 .main_Navigation .nav_Container .logo_Container .logo_image {
@@ -77,7 +102,7 @@
   border-radius: 50%;
 }
 
-.container_Search {
+nav .container_SearchResult {
   background-color: #fff;
   left: 40%;
   margin-left: -150px;
@@ -85,7 +110,7 @@
   right: -12px;
   top: 32px;
   width: 243px;
-  z-index: 9;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   max-height: 362px;
@@ -95,7 +120,10 @@
   flex-shrink: 0;
   margin: 0;
 }
-
+/* nav .container_Search a {
+  z-index: 15;
+  position: relative;
+} */
 .search_user {
   text-decoration: none;
   border-bottom: solid 1px #dbdbdb;
@@ -109,7 +137,7 @@
   display: flex;
   flex-direction: column;
 }
-.container_ProfileImage {
+.main_Navigation .container_ProfileImage {
   width: 32px;
   height: 32px;
   border-radius: 50%;
@@ -117,11 +145,11 @@
   display: block;
   overflow: hidden;
 }
-.container_ProfileImage img {
+.main_Navigation .container_ProfileImage img {
   width: 100%;
   height: 100%;
 }
-.span_UserID {
+.main_Navigation .span_UserID {
   line-height: 22px;
   text-overflow: ellipsis;
   color: rgba(var(--i1d, 38, 38, 38), 1);
@@ -134,7 +162,7 @@ a:visited {
   color: rgba(var(--fe0, 0, 55, 107), 1);
   text-decoration: none;
 }
-.span_UserName {
+.main_Navigation .span_UserName {
   color: #8e8e8e;
   font-size: 14px;
   font-weight: 300;
@@ -144,7 +172,7 @@ a:visited {
   text-overflow: ellipsis;
 }
 
-.btn_LogIn {
+.main_Navigation .btn_LogIn {
   background-color: #0095f6;
   color: white;
   border-radius: 4px;
@@ -155,7 +183,7 @@ a:visited {
   text-decoration: none;
   font-size: 14px;
 }
-.btn_SignIn {
+.main_Navigation .btn_SignIn {
   margin-left: 15px;
   padding: 5px 9px;
   text-align: center;
@@ -167,4 +195,8 @@ a:visited {
   border: 1px solid transparent;
   text-decoration: none;
   font-size: 14px;
+}
+
+.menu_Container svg {
+  cursor: pointer;
 }
