--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,3 +1,6 @@
+html {
+  height: 100%;
+}
 body {
   min-height: 100%;
   display: flex;
@@ -7,23 +10,27 @@ body {
     Arial, sans-serif;
   margin: 0;
   padding: 0;
+  flex-direction: column;
+  height: 100%;
 }
 main {
   display: flex;
-  margin-top: 50px;
+
   justify-items: center;
-  width: 100vw;
+  width: 100%;
   background-color: #fafafa;
+  position: relative;
+  flex-grow: 1;
 }
 
 .profile_Main .profile_MainContainer {
   max-width: 935px;
   width: 100%;
+  height: 100%;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
   padding: 30px 20px 0;
   margin: 0 auto 30px;
 }
@@ -36,15 +43,25 @@ main {
 }
 .profile_Main .profile_MainContainer .profile_Header .profile_UserPicture {
   cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  margin-right: 40px;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 0;
+}
+.profile_Main .profile_MainContainer .profile_Header .profile_UserPicture2 {
   height: 150px;
   width: 150px;
-  margin-left: 40px;
-  display: flex;
-  margin-right: 40px;
 }
 .profile_Main .profile_MainContainer .profile_Header .profile_Info {
   display: flex;
   flex-direction: column;
+  flex-grow: 2;
+  flex-basis: 30px;
+  flex-shrink: 1;
+  min-width: 0;
 }
 .profile_Main
   .profile_MainContainer
@@ -73,6 +90,9 @@ main {
   font-size: 28px;
   display: flex;
   align-items: center;
+}
+.profile_Info1 .profile_UserID {
+  font-weight: 300;
 }
 .profile_Main
   .profile_MainContainer
@@ -202,6 +222,7 @@ main .profile_Main {
   padding: 5px 9px;
   background-color: transparent;
   border-radius: 4px;
+  outline: 0;
 }
 
 .txt_UserName {
@@ -213,4 +234,7 @@ main .profile_Main {
   vertical-align: baseline;
   font-size: 16px;
   margin-bottom: 3px;
+}
+button:active {
+  opacity: 0.7;
 }
